--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,71 +5,25 @@
     android:layout_width="match_parent"
     android:background="@color/bg"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".Activity.MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-            <HorizontalScrollView
-                android:layout_width="match_parent"
-                android:layout_marginStart="20dp"
-                android:scrollbars="none"
-                android:layout_height="wrap_content">
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
 
-                    <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="sddsgsdg"
-                    android:textSize="20sp"
-                    android:layout_margin="10dp"
-
-                    android:textColor="@color/white"/>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rcViewUpScrol"
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal"
+            android:layout_marginStart="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="sddsgsdg"
-                        android:textSize="20sp"
-                        android:layout_margin="10dp"
-                        android:textColor="@color/white"/>
 
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="sddsgsdg"
-                        android:layout_margin="10dp"
-                        android:textSize="20sp"
-                        android:textColor="@color/white"/>
-
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="sddsgsdg"
-                        android:layout_margin="10dp"
-                        android:textSize="20sp"
-                        android:textColor="@color/white"/>
-
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="sddsgsdg"
-                        android:textSize="20sp"
-                        android:layout_margin="10dp"
-                        android:textColor="@color/white"/>
-
-                </LinearLayout>
-            </HorizontalScrollView>
 
         <TextView
             android:layout_width="wrap_content"
@@ -81,12 +35,12 @@
             android:textSize="30sp"/>
 
 
-        <RelativeLayout
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rcView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"/>
+            android:layout_marginEnd="20dp" />
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
